# 2D-animations

./: .gitignore  CMakeLists.txt  README.md  cube.cpp  full3d.cpp  main.cpp  src
src/: Xmath.hpp  cube.hpp  header.hpp  matrix4x4.cpp  matrix4x4.hpp  renderer.cpp  renderer.hpp  shape.cpp  shape.hpp  vector4.cpp  vector4.hpp
